--- a/openff_sphinx_theme/openff_sphinx_theme/relbar.html
+++ b/openff_sphinx_theme/openff_sphinx_theme/relbar.html
@@ -1,21 +1,23 @@
-{%- if nav_bar_tabs %}
-  <nav class="md-tabs" data-md-component="tabs">
-    <div class="md-tabs__inner md-grid">
-      <ul class="md-tabs__list">
-        {%- block rootrellink %}
-          {%- if theme_master_doc %}
-          <li class="md-tabs__item"><a href="{{ pathto(master_doc)|e }}" class="md-tabs__link">{{ shorttitle }}</a></li>
-          {%- endif %}
-        {%- endblock %}
-        {%- for item in theme_nav_links %}
-            {% set localhref=pathto( item.href ) if item.internal else item.href|e %}
-            <li class="md-tabs__item"><a href="{{ localhref|e }}" class="md-tabs__link">{{ item.title }}</a></li>
-        {%- endfor %}
-        {%- for parent in parents %}
-          <li class="md-tabs__item"><a href="{{ parent.link|e }}" class="md-tabs__link">{{ parent.title }}</a></li>
-        {%- endfor %}
-          <li class="md-tabs__item"><a href="#" class="md-tabs__link">{{ title }}</a></li>
-      </ul>
-    </div>
-  </nav>
-{%- endif %}
+<nav class="columns has-text-light has-background-primary">
+  <div class="column breadcrumb">
+    <ul>
+      {%- block rootrellink %}
+        {%- if theme_master_doc %}
+          <li><a href="{{ pathto(master_doc)|e }}">{{ shorttitle }}</a></li>
+        {%- endif %}
+      {%- endblock %}
+      {%- for parent in parents %}
+        <li><a href="{{ parent.link|e }}">{{ parent.title }}</a></li>
+      {%- endfor %}
+        <li class="is-active"><a href="#">{{ title }}</a></li>
+    </ul>
+  </div>
+  <div class="column tabs is-narrow">
+    <ul>
+    {%- for item in theme_nav_links %}
+        {% set localhref=pathto( item.href ) if item.internal else item.href|e %}
+        <li><a href="{{ localhref|e }}">{{ item.title }}</a></li>
+    {%- endfor %}
+    </ul>
+  </div>
+</nav>
