--- a/openff_sphinx_theme/openff_sphinx_theme/repo.html
+++ b/openff_sphinx_theme/openff_sphinx_theme/repo.html
@@ -1,12 +1,14 @@
-<a href="{{ theme_repo_url }}" title="Go to repository" class="md-source" data-md-source="github">
-{% if theme_repo_type %}
-    <div class="md-source__icon">
-      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24" width="28" height="28">
-        <use xlink:href="#__{{ theme_repo_type }}" width="24" height="24"></use>
-      </svg>
-    </div>
+<a href="{{ theme_repo_url }}" class="navbar-item is-family-monospace">
+  {% if theme_repo_type %}
+  <span class="icon-text">
+    <span class="icon">
+      <i class="fab fa-{{theme_repo_type | lower() }}"></i>
+    </span>
+    <span>
   {% endif %}
-  <div class="md-source__repository">
     {{ theme_repo_name }}
-  </div>
+  {% if theme_repo_type %}
+    </span>
+  </span>
+  {% endif %}
 </a>
