--- a/openff_sphinx_theme/openff_sphinx_theme/hero.html
+++ b/openff_sphinx_theme/openff_sphinx_theme/hero.html
@@ -1,6 +1,6 @@
 {% if pagename in theme_heroes %}
 {% set hero = theme_heroes[pagename] %}
-<div class="hero is-primary" data-md-component="hero">
+<div class="hero is-primary is-hidden-mobile" data-md-component="hero">
   <div class="hero-body">
     <p class="subtitle has-text-centered">{{ hero }}</p>
   </div>
