--- a/openff_sphinx_theme/openff_sphinx_theme/relbar.html
+++ b/openff_sphinx_theme/openff_sphinx_theme/relbar.html
@@ -1,23 +1,13 @@
-<nav class="columns has-text-light has-background-primary is-hidden-mobile">
-  <div class="column breadcrumb">
-    <ul>
-      {%- block rootrellink %}
-        {%- if theme_master_doc %}
-          <li><a href="{{ pathto(master_doc)|e }}">{{ shorttitle }}</a></li>
-        {%- endif %}
-      {%- endblock %}
-      {%- for parent in parents %}
-        <li><a href="{{ parent.link|e }}">{{ parent.title }}</a></li>
-      {%- endfor %}
-        <li class="is-active"><a href="#">{{ title }}</a></li>
-    </ul>
-  </div>
-  <div class="column tabs is-narrow is-hidden-touch">
-    <ul>
-    {%- for item in theme_nav_links %}
-        {% set localhref=pathto( item.href ) if item.internal else item.href|e %}
-        <li><a href="{{ localhref|e }}">{{ item.title }}</a></li>
+<div class="breadcrumb">
+  <ul>
+    {%- block rootrellink %}
+      {%- if theme_master_doc %}
+        <li><a href="{{ pathto(master_doc)|e }}">{{ shorttitle }}</a></li>
+      {%- endif %}
+    {%- endblock %}
+    {%- for parent in parents %}
+      <li><a href="{{ parent.link|e }}">{{ parent.title }}</a></li>
     {%- endfor %}
-    </ul>
-  </div>
-</nav>
+      <li class="is-active"><a href="#">{{ title }}</a></li>
+  </ul>
+</div>
