Clean up in preparation for actual use

--- a/openff_sphinx_theme/openff_sphinx_theme/footer.html
+++ b/openff_sphinx_theme/openff_sphinx_theme/footer.html
@@ -1,39 +1,41 @@
 <footer class="footer">
   <div class="footer-content">
-    {%- block footerrel %}
-      <nav class="level">
-        <div class="level-left">
-          {% if prev %}
-            <div class="level-item">
-              <a href="{{ prev.link|e }}" title="{{ prev.title|striptags|e }}"
-                 class="icon-text"
-                 rel="prev">
+    {%- if prev or next -%}
+      {%- block footerrel %}
+        <nav class="level">
+          <div class="level-left">
+            {% if prev %}
+              <div class="level-item">
+                <a href="{{ prev.link|e }}" title="{{ prev.title|striptags|e }}"
+                   class="icon-text"
+                   rel="prev">
 
-                  <span class="icon">
-                    <i class="fas fa-arrow-left"></i>
-                  </span>
-                  <span class="is-size-5">{{ prev.title }}</span>
-              </a>
-            </div>
-          {% endif %}
-        </div>
-        <div class="level-right">
-          {% if next %}
-            <div class="level-item">
-              <a href="{{ next.link|e }}" title="{{ next.title|striptags|e }}"
-                 class="icon-text"
-                 rel="next">
+                    <span class="icon">
+                      <i class="fas fa-arrow-left"></i>
+                    </span>
+                    <span class="is-size-5">{{ prev.title }}</span>
+                </a>
+              </div>
+            {% endif %}
+          </div>
+          <div class="level-right">
+            {% if next %}
+              <div class="level-item">
+                <a href="{{ next.link|e }}" title="{{ next.title|striptags|e }}"
+                   class="icon-text"
+                   rel="next">
 
-                  <span class="is-size-5">{{ next.title }}</span>
-                  <span class="icon">
-                    <i class="fas fa-arrow-right"></i>
-                  </span>
-              </a>
-            </div>
-          {% endif %}
-        </div>
-      </nav>
-    {% endblock %}
+                    <span class="is-size-5">{{ next.title }}</span>
+                    <span class="icon">
+                      <i class="fas fa-arrow-right"></i>
+                    </span>
+                </a>
+              </div>
+            {% endif %}
+          </div>
+        </nav>
+      {% endblock %}
+    {%- endif -%}
     {%- block extrafooter %}
     {%- endblock %}
     <div class="columns">
@@ -65,6 +67,23 @@
       <div class="socials column">
         <p class="pb-3">An <a href="https://openforcefield.org/" class="has-text-white">Open Force Field</a> project.</p>
         <div>
+          {% if not theme_clear_openff_socials %}
+              <a href="https://zenodo.org/communities/openforcefield/" class="icon has-text-light is-medium" title="OpenFF on Zenodo">
+                <i class="fa-lg ai-lg ai ai-zenodo"></i>
+              </a>
+              <a href="https://www.youtube.com/channel/UCh0aJSUm_sYr7nuTzhW806g" class="icon has-text-light is-medium" title="OpenFF on YouTube">
+                <i class="fa-lg fab fa-youtube"></i>
+              </a>
+              <a href="https://github.com/openforcefield" class="icon has-text-light is-medium" title="OpenFF on GitHub">
+                <i class="fa-lg fab fa-github"></i>
+              </a>
+              <a href="https://twitter.com/openforcefield" class="icon has-text-light is-medium" title="OpenFF on Twitter">
+                <i class="fa-lg fab fa-twitter"></i>
+              </a>
+              <a href="https://www.linkedin.com/company/openforcefield/" class="icon has-text-light is-medium" title="OpenFF on LinkedIn">
+                <i class="fa-lg fab fa-linkedin"></i>
+              </a>
+          {% endif %}
           {% for link in theme_socials %}
             {% if link.href and link.icon_classes %}
               <a href="{{link.href}}" class="icon has-text-light is-medium" title="{{link.title}}">
